--- a/resources/html/help/help.html
+++ b/resources/html/help/help.html
@@ -1,34 +1,30 @@
-{{extend defaultLayout}}
-
-{{block 'css'}}
-<link href="{{plugin}}/help/help.css" rel="stylesheet" type="text/css"/>
-{{/block}}
-
-{{block 'main'}}
-<div class="info_box">
-    <div class="head-box type{{bgType}}">
-        <div class="title">{{helpCfg.title||"使用帮助"}}</div>
-        <div class="label">{{helpCfg.subTitle || "Yunzai-Bot & Miao-Plugin"}}</div>
-    </div>
-</div>
-
-{{each helpGroup group}}
-<div class="cont-box">
-    <div class="help-group">{{group.group}}</div>
-    <div class="help-table">
-        {{each group.list help idx}}
-        {{if idx%3 == 0}}
-        <div class="tr">
-            {{/if}}
-            <div class="td">
-                <strong class="help-title">{{help.title}}</strong>
-                <span class="help-desc">{{help.desc}}</span>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="utf-8">
+    <title>菜单</title>
+    <link href={{css}} rel="stylesheet" type="text/css">
+</head>
+<body>
+<div class="head-box">
+    <div class="title">{{helpCfg.title}}</div>
+    <div class="label">{{helpCfg.subTitle || "Yunzai-Bot & Miao-Plugin"}}</div>
+    {{#each helpList}}
+    <div class="cont-box">
+        <div class="help-group">{{group}}</div>
+        <div class="help-table">
+            <div class="tr">
+                {{@each list}}
+                <div class="td">
+                    <strong class="help-title">{{ title }}</strong>
+                    <span class="help-desc">{{ desc }}</span>
+                </div>
+                {{/each}}
             </div>
-            {{if idx%3 ==2 || idx == group.list.length -1}}
         </div>
-        {{/if}}
-        {{/each}}
     </div>
+    {{/each}}
+    <div class="bottom-box">Yunzai-Bot</div>
 </div>
-{{/each}}
-{{/block}}
+</body>
+</html>
