--- a/resources/html/help/index.html
+++ b/resources/html/help/index.html
@@ -1,197 +1,41 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="shortcut icon" href="#"/>
-    <link rel="preload"
-          href="../../common/font/HYWH-65W.woff" as="font"
-          type="font/woff">
-    <link rel="stylesheet/less" type="text/css" href="help.less"/>
-    <script src="https://cdn.jsdelivr.net/npm/less@4"></script>
-    <title>miao-plugin</title>
-</head>
-<body>
-<div class="container">
+{{extend defaultLayout}}
 
+{{block 'main'}}
 
-    <div class="info-box">
-        <div class="head-box">
-            <div class="title">图鉴帮助</div>
-            <div class="label">Yunzai-Bot &#38; xiaoyao-cvs-Plugin</div>
-        </div>
+<div class="info-box">
+    <div class="head-box">
+        <div class="title">{{helpCfg.title||"使用帮助"}}</div>
+        <div class="label">{{helpCfg.subTitle || "Yunzai-Bot & yaya-Plugin"}}</div>
     </div>
-
-
-    <div class="cont-box">
-        <div class="cont-center">
-            <div class="help-group">信息查询</div>
-        </div>
-        <div class="help-table">
-            <div class="tr">
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#角色图鉴</strong>
-                        <span class="help-desc">目前已知原神角色概况</span>
-                    </div>
-                </div>
-
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#武器图鉴</strong>
-                        <span class="help-desc">目前已知原神武器概况</span>
-                    </div>
-                </div>
-
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#食谱图鉴</strong>
-                        <span class="help-desc">目前已知原神食谱概况</span>
-                    </div>
-                </div>
-
-            </div>
-            <div class="tr">
-
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#怪物图鉴</strong>
-                        <span class="help-desc">目前已知原神怪物概况</span>
-                    </div>
-                </div>
-
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#圣遗物图鉴</strong>
-                        <span class="help-desc">目前已知原神圣遗物概况</span>
-                    </div>
-                </div>
-
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#体力</strong>
-                        <span class="help-desc">重写原有的查询当前米游社体力</span>
-                    </div>
-                </div>
-
-
-            </div>
-        </div>
-
-    </div>
-
-
-    <div class="cont-box">
-        <div class="help-group">stoken功能</div>
-
-        <div class="help-table">
-            <div class="tr">
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#更新抽卡记录</strong>
-                        <span class="help-desc">（更新|获取） 抽卡记录</span>
-                    </div>
-                </div>
-
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#mys原神签到</strong>
-                        <span class="help-desc">社区米游币获取(由于有验证码大概会失败)</span>
-                    </div>
-                </div>
-
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#刷新ck</strong>
-                        <span class="help-desc">重置当前cookie</span>
-                    </div>
-                </div>
-
-
-            </div>
-        </div>
-
-    </div>
-
-
-    <div class="cont-box">
-        <div class="help-group">其他功能</div>
-
-        <div class="help-table">
-            <div class="tr">
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#云原神签到</strong>
-                        <span class="help-desc">云原神签到</span>
-                    </div>
-                </div>
-
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#崩坏三签到</strong>
-                        <span class="help-desc">其余模块签到支持（崩坏3|崩坏2|未定义）</span>
-                    </div>
-                </div>
-
-
-                <div class="td"></div>
-
-            </div>
-        </div>
-
-    </div>
-
-
-    <div class="cont-box">
-        <div class="help-group">管理命令，仅管理员可用</div>
-
-        <div class="help-table">
-            <div class="tr">
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#图鉴设置</strong>
-                        <span class="help-desc">例如#图鉴设置体力开启（关闭）</span>
-                    </div>
-                </div>
-
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#图鉴更新</strong>
-                        <span class="help-desc">用于获取最新的图鉴数据图</span>
-                    </div>
-                </div>
-
-
-                <div class="td">
-                    <div class="th">
-                        <strong class="help-title">#图鉴插件更新</strong>
-                        <span class="help-desc">用于获取最新的插件包数据</span>
-                    </div>
-                </div>
-
-
-            </div>
-        </div>
-
-    </div>
-
-    <div class="copyright">yaya-plugin
-        <div class="version">1.0.0</div>
-    </div>
-
 </div>
-</body>
-</html>
+{{each helpList group}}
+{{set len = group?.list?.length || 0 }}
+<div class="cont-box">
+    <div class="cont-center">
+        <div class="help-group">{{group.group}}</div>
+    </div>
+    {{if len > 0}}
+    <div class="help-table">
+        <div class="tr">
+            {{each group.list help idx}}
+            <div class="td">
+                <div class="th">
+                    <strong class="help-title">{{help.title}}</strong>
+                    <span class="help-desc">{{help.desc}}</span>
+                </div>
+            </div>
+            {{if idx%colCount === colCount-1 && idx>0 && idx< len-1}}
+        </div>
+        <div class="tr">
+            {{/if}}
+            {{/each}}
+            <% for(let i=(len-1)%colCount; i< colCount-1 ; i++){ %>
+            <div class="td"></div>
+            <% } %>
+        </div>
+    </div>
+    {{/if}}
+</div>
+{{/each}}
+<div class="copyright">{{@sys.copyright}}</div>
+{{/block}}
